--- a/index.html
+++ b/index.html
@@ -21,8 +21,55 @@
 				<li class="menu_item">Контакти</li>
 			</ul>
 			<input type="button" class="contact-button" value="Зателефонувати" />
+			
 		</div>
+		<div class="content-about-me">
+			<div class="column-left">
+				<img src="portret.png" class="img">
+			</div>
+			<div class="column-right">
+				<h4>HTML (Hypertext Markup Language — Мова гіпертекстової розмітки) — це мова опису структури сторінок
+					документів, яка дозволяє звичайний текст форматувати в абзаци, заголовки, списки та інші структури,
+					створювати посилання на інші сторінки. Це текстова мова, в якій інструкції з форматування, що
+					називаються
+					тегами, вбудовані в розділи документа, які містять конкретну інформацію. Теги повідомляють браузерам, як
+					форматувати і представляти інформацію на екрані. </h4>
+			</div>
+
+
+			</div>
+			<input type="button" class="button1" value="Дізнатися більше">
+			<div class="logos"></div>
+			<div class="text">
+				<h4>Я Артем </h4>
+			</div>
+			<img src="portret2.png" class="portret" alt="">
+			<div class="about">Про мене</div>
+		</div>
+		<div class="under1">
+			<h1>
+				Вивчаю фронт енд та HTML CSS Вчуся у 10 класі Одна з головних переваг використання CSS - це можливість
+				розділити зміст сторінки від її оформлення. Таке розділення дозволило покращити сприйняття та доступність
+				змісту, забезпечити більшу гнучкість та контроль за відображенням змісту в різних умовах, зробити зміст
+				більш структурованим та простим, прибрати повторення та ін. Власне це ж і була основна мета створення цієї
+				технології.
+	
+			
+
+			</h1>
+			<img src="smile.png.png" class="smile" alt="">
+		    <img>
+	
+	
+		</div>
+
+
+
+
+
 	</div>
+	
+
 
 </body>
 
